# napari-czifile2

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml
napari_czifile/: _reader.py
napari_czifile/_tests/: test_reader.py
napari_czifile2/: __init__.py  _reader.py  io.py  napari.yaml
