[metadata]
name = napari-czifile2
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
license = MIT
url = https://github.com/BodenmillerGroup/napari-czifile2
description = Carl Zeiss Image (.czi) file support for napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/BodenmillerGroup/napari-czifile2/issues
    Documentation = https://github.com/BodenmillerGroup/napari-czifile2#README.md
    Source Code = https://github.com/BodenmillerGroup/napari-czifile2
    User Support = https://github.com/BodenmillerGroup/napari-czifile2/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    czifile
    imagecodecs
    numpy
    tifffile
use_scm_version =
    write_to = napari_czifile2/_version.py

[options.package_data]
napari_czifile2 = napari.yaml

[options.entry_points]
napari.manifest =
    napari-czifile2 = napari_czifile2:napari.yaml

[flake8]
max-line-length = 88
extend-ignore = E203
