[metadata]
name = napari-czifile2
url = https://github.com/BodenmillerGroup/napari-czifile2
author = Jonas Windhager
author_email = jonas@windhager.io
maintainer = Milad Adibi
maintainer_email = milad.adibi@uzh.ch
classifiers =
    Framework :: napari
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Carl Zeiss Image (.czi) file support for napari
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/BodenmillerGroup/napari-czifile2/issues
    Documentation = https://github.com/BodenmillerGroup/napari-czifile2#README.md
    Source Code = https://github.com/BodenmillerGroup/napari-czifile2
    User Support = https://github.com/BodenmillerGroup/napari-czifile2/issues

[options]
include_package_data = True
install_requires =
    czifile
    imagecodecs
    numpy
    tifffile
python_requires = >=3.8
packages = find:

[options.package_data]
napari_czifile2 = napari.yaml

[options.entry_points]
napari.manifest =
    napari-czifile2 = napari_czifile2:napari.yaml
